• Custom handling of Google Images has been removed to workaround an issues caused by a change in the structure of the website.
  ◦ I am working on adding support for this back in the future.
• A new option has been added called "Redirect Only". This can be enabled in the unlikely event that Overamped ever causes issues with websites in the future.
• Overamped will now re-check the installation when refreshing the results of the Install Checker, removing false-negative results.

Thank you for using Overamped, it's great knowing that I'm able to help people avoid AMP!

If you've found Overamped helpful a rating in the App Store is greatly appreciated. A written review is even better!